<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_color"
    tools:context=".GuardScreen">

    <TextView
        android:id="@+id/tv_security"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10_dp"
        android:text="@string/security"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_25_sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/pink_card"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_180_dp"
        android:layout_margin="@dimen/dimen_16_dp"
        app:cardBackgroundColor="@color/pink_card_color"
        app:cardCornerRadius="@dimen/dimen_15_dp"
        app:cardElevation="@dimen/dimen_10_dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_security" />

    <TextView
        android:id="@+id/tv_sos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16_dp"
        android:elevation="@dimen/dimen_16_dp"
        android:text="@string/sos"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_25_sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/pink_card"
        app:layout_constraintTop_toTopOf="@+id/pink_card" />

    <TextView
        android:id="@+id/tv_sos_description"
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16_dp"
        android:elevation="@dimen/dimen_16_dp"
        android:text="@string/sos_description"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_15_sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toStartOf="@+id/ivSos"
        app:layout_constraintStart_toStartOf="@+id/pink_card"
        app:layout_constraintTop_toBottomOf="@+id/tv_sos" />

    <ImageView
        android:id="@+id/ivSos"
        android:layout_width="@dimen/dimen_100_dp"
        android:layout_height="@dimen/dimen_100_dp"
        android:layout_margin="@dimen/dimen_10_dp"
        android:elevation="@dimen/dimen_16_dp"
        android:src="@drawable/sos"
        app:layout_constraintBottom_toBottomOf="@+id/pink_card"
        app:layout_constraintEnd_toEndOf="@+id/pink_card"
        app:layout_constraintTop_toTopOf="@+id/pink_card" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/green_card"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_180_dp"
        android:layout_margin="@dimen/dimen_16_dp"
        app:cardBackgroundColor="@color/green_card_color"
        app:cardCornerRadius="@dimen/dimen_15_dp"
        app:cardElevation="@dimen/dimen_16_dp"
        app:layout_constraintTop_toBottomOf="@+id/pink_card" />

    <TextView
        android:id="@+id/tv_guard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16_dp"
        android:elevation="@dimen/dimen_16_dp"
        android:text="@string/guard"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_25_sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/green_card"
        app:layout_constraintTop_toTopOf="@+id/green_card" />

    <TextView
        android:id="@+id/tv_guard_description"
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16_dp"
        android:elevation="@dimen/dimen_16_dp"
        android:text="@string/guard_description"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_15_sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toStartOf="@+id/ivSos"
        app:layout_constraintStart_toStartOf="@+id/green_card"
        app:layout_constraintTop_toBottomOf="@+id/tv_guard" />

    <ImageView
        android:id="@+id/ivGuard"
        android:layout_width="@dimen/dimen_100_dp"
        android:layout_height="@dimen/dimen_100_dp"
        android:layout_margin="@dimen/dimen_10_dp"
        android:elevation="@dimen/dimen_16_dp"
        android:src="@drawable/shield"
        app:layout_constraintBottom_toBottomOf="@+id/green_card"
        app:layout_constraintEnd_toEndOf="@+id/green_card"
        app:layout_constraintTop_toTopOf="@+id/green_card" />
</androidx.constraintlayout.widget.ConstraintLayout>